Fixed overflow issue while scrolling in sidebar

--- a/src/index.scss
+++ b/src/index.scss
@@ -127,6 +127,7 @@ code {
       background: rgb(32, 34, 35);
 
       .list {
+        // position: relative;
         margin-top: 30px;
         padding-top: 20px;
         display: flex;
@@ -136,6 +137,7 @@ code {
         overflow-y: scroll;
         width: auto;
         height: 100%;
+        max-height: calc(100% - 85px);
         &::-webkit-scrollbar {
           width: 0 !important;
         }
